Treating the playbuzz plugin

--- a/tests/Facebook/InstantArticles/Transformer/CMS/wp.html
+++ b/tests/Facebook/InstantArticles/Transformer/CMS/wp.html
@@ -148,5 +148,14 @@
     <script src="//sibling.com/brother.js"></script>
     <p>Standard paragraph that <b>shouldn't</b> lie within the interactive block.</p>
     <div class="fb-post" data-href="https://www.facebook.com/some-page/posts/some-post"></div>
+    <p>
+      <script type="text/javascript" src="//cdn.playbuzz.com/widget/feed.js"></script>
+      <div class="pb_feed" data-key="oembed" data-game="https://www.playbuzz.com/sportsillustrated/can-you-guess-the-olympic-sport-by-the-athlete-s-facial-expression" data-recommend="False" data-tags="ALL" ></div>
+    </p>
+    <p>
+      <script type="text/javascript" src="//cdn.playbuzz.com/widget/feed.js"></script>
+    </p>
+    <div class="pb_feed" data-key="oembed" data-game="https://www.playbuzz.com/finnmorgan10/hugh-jackman-is-officially-saying-goodbye-to-wolverine" data-recommend="False" data-tags="ALL" ></div>
+    <p></p>
   </body>
 </html>
